Fix various bugs and finish code snippets post

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://www.ishanshah.me/thoughts/"
 languageCode = "en-us"
-googleAnalytics = "G-XYFD95KB4J"
+googleAnalytics = "G-CEQVMRYG8Q"
 pygmentsUseClasses = true
 relativeURLs = false
 disablePathToLower = true
