--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Ishan Shah
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -6,12 +6,14 @@ enableLatex: true
 enableSPA: true
 enableContextualBacklinks: true
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  This is a space for me to hold my thoughts. I plan on adding notes about what I'm currently learning, 
+  various software topics I've always wanted to discuss, and other random musings.
 page_title:
-  "🪴 Quartz 3.2"
+  "🪴 Ishan's Garden"
 links:
+  - link_name: Email
+    link: mailto:ishan0102@utexas.edu
   - link_name: Twitter
-    link: https://twitter.com/_jzhao
+    link: https://twitter.com/ishan0102
   - link_name: Github
-    link: https://github.com/jackyzha0
+    link: https://github.com/ishan0102
