--- a/data/config.yaml
+++ b/data/config.yaml
@@ -9,7 +9,7 @@ description:
   This is a space for me to hold my thoughts. I plan on adding notes about what I'm currently learning, 
   various software topics I've always wanted to discuss, and other random musings.
 page_title:
-  "🪴 Ishan's Garden"
+  "Ishan's Garden"
 links:
   - link_name: Email
     link: mailto:ishan0102@utexas.edu
