Deploy through ishan.coffee

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.ishanshah.me/thoughts/"
+baseURL = "https://www.ishan.coffee"
 languageCode = "en-us"
 googleAnalytics = "G-CEQVMRYG8Q"
 pygmentsUseClasses = true
