--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://www.ishan.coffee"
 languageCode = "en-us"
-googleAnalytics = "G-CEQVMRYG8Q"
+googleAnalytics = "G-LMSG0JHBFB"
 pygmentsUseClasses = true
 relativeURLs = false
 disablePathToLower = true
