Writing is thinking

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -15,5 +15,5 @@ links:
     link: mailto:ishan0102@utexas.edu
   - link_name: Twitter
     link: https://twitter.com/ishan0102
-  - link_name: Github
+  - link_name: GitHub
     link: https://github.com/ishan0102
